# ChangeLog for sci-mathematics/gimps
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gimps/ChangeLog,v 1.26 2008/12/19 18:33:02 spock Exp $

*gimps-25.8 (19 Dec 2008)

  19 Dec 2008; Michał Januszewski <spock@gentoo.org> +gimps-25.8.ebuild:
  Version bump (bug #251607).

*gimps-25.7 (11 Dec 2008)

  11 Dec 2008; Michał Januszewski <spock@gentoo.org>
  +files/gimps-25.7-init.d, +files/mprime-25.7.bpatch, +gimps-25.7.ebuild:
  Version bump (bug #245489).

  04 Nov 2008; Michał Januszewski <spock@gentoo.org> gimps-25.6.ebuild:
  Remove unnecessary dependencies from RDEPEND.

  20 Aug 2008; Michał Januszewski <spock@gentoo.org> gimps-25.6.ebuild:
  Make it possible for sys-libs/e2fsprogs-libs to satisfy the
  sys-libs/com_err dependency.

*gimps-25.6 (16 Jul 2008)

  16 Jul 2008; Michał Januszewski <spock@gentoo.org>
  +files/gimps-25.6-conf.d, +files/gimps-25.6-init.d, gimps-24.14-r1.ebuild,
  +gimps-25.6.ebuild:
  Version bump. Make 24.14-r1 fail if the kernel doesn't support 32-bit ELF
  binaries (bug #225107).

  21 Jan 2008; Michał Januszewski <spock@gentoo.org>
  files/gimps-24.14-init.d, gimps-24.14-r1.ebuild:
  Really make gimps stable on amd64 this time. Fix the initscript so that
  error messages are not displayed when it's first run.

  14 Nov 2007; Michał Januszewski <spock@gentoo.org> gimps-24.14-r1.ebuild:
  amd64 stable, bug #189861.

  10 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  gimps-24.14-r1.ebuild:
  stable x86, bug 189861

  22 Apr 2007; Michał Januszewski <spock@gentoo.org> gimps-24.14.ebuild,
  gimps-24.14-r1.ebuild:
  Use newinitd and newconfd (bug #174266).

  22 Apr 2007; Michał Januszewski <spock@gentoo.org> -gimps-24.13.ebuild:
  Remove old ebuild.

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  23 Sep 2006; Michał Januszewski <spock@gentoo.org> gimps-24.13.ebuild,
  gimps-24.14.ebuild, gimps-24.14-r1.ebuild: