@@ -1,6 +1,11 @@
 # ChangeLog for sci-mathematics/gimps
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gimps/ChangeLog,v 1.26 2008/12/19 18:33:02 spock Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gimps/ChangeLog,v 1.27 2009/04/02 11:19:27 spock Exp $
+
+*gimps-25.9 (02 Apr 2009)
+
+  02 Apr 2009; Michał Januszewski <spock@gentoo.org> +gimps-25.9.ebuild:
+  Version bump (bug #264372).
 
 *gimps-25.8 (19 Dec 2008)
 
